# run-on-gce

./: .gitignore  .mypy.ini  README.md  pyproject.toml
run_on_gce/: __init__.py  run_on_gce.py
