[tool.poetry]
name = "run-on-gce"
version = "0.0.2"
description = ""
authors = ["Kaido Iwamoto <h6824.kaido@gmail.com>"]
license = "MIT"
packages = [
    { include = "run_on_gce.py" }
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
black = "^19.10b0"
pylint = "^2.5.3"
ptpython = "^3.0.5"
ipython = "^7.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
